syntax = "proto3";

option csharp_namespace = "BackendApi";

package job;

// The job service definition.
service Job {
  // Register job
  rpc Register (RegisterRequest) returns (RegisterResponse);

  rpc GetProcessingResult (GetProcessingResultRequest) returns (GetProcessingResultResponce);
}

// The request message containing the user's name.
message RegisterRequest {
  string description = 1;
  string data = 2;
}

message GetProcessingResultRequest {
  string id = 1;
}

// The response message containing the greetings.
message RegisterResponse {
  string id = 1;
}

message GetProcessingResultResponce {
  string ranc = 1;
  string status = 2;
}
